# my-blog

./: .gitignore  CLAUDE.md  SETUP.md  test-inputs.md
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_til_tables.py  003_add_books_and_book_notes.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: books.py  generate.py  posts.py  tags.py  tils.py
backend/app/crud/: __init__.py  book.py  post.py  tag.py  til.py
backend/app/db/: session.py
backend/app/models/: __init__.py  book.py  post.py  tag.py  til.py
backend/app/schemas/: __init__.py  book.py  post.py  tag.py  til.py
backend/app/services/ai/: __init__.py  generator.py  prompts.py
backend/app/services/ai/providers/: __init__.py  anthropic.py  base.py
backend/app/services/content/: __init__.py
backend/app/services/content/extractors/: __init__.py  file.py  url.py
backend/app/utils/: __init__.py  slug.py
backend/deploy/: README.md  blog-api.service  nginx.conf
backend/tests/: conftest.py  verify_phase1.py
backend/tests/integration/: test_posts_create.py  test_posts_delete.py  test_posts_read.py  test_posts_update.py  test_tags.py  test_tils.py
backend/tests/unit/: test_slug.py
docs/: aws-ec2-setup-guide-next-steps.md  aws-ec2-setup-guide.md  aws-free-tier-guide.md  backend-deployment.md  deployment-strategy.md  frontend-deployment.md
frontend/: DEPLOYMENT.md  next.config.ts  (+2 more)
(+76 files in other folders)
